// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Group displays a group 1`] = `
<div
  className="frames-group"
  onContextMenu={[Function]}
>
  <div
    className="group"
    onClick={[Function]}
    role="listitem"
    tabIndex={0}
    title="Show Back frames"
  >
    <FrameIndent />
    <FrameLocation
      expanded={false}
      frame={
        Object {
          "displayName": "foo",
          "library": "Back",
        }
      }
    />
    <span
      className="clipboard-only"
    >
       
    </span>
    <Badge>
      1
    </Badge>
  </div>
</div>
`;

exports[`Group passes the getFrameTitle prop to the Frame components 1`] = `
<div
  className="frames-group expanded"
  onContextMenu={[Function]}
>
  <div
    className="group"
    key="1"
    onClick={[Function]}
    role="listitem"
    tabIndex={0}
    title="Collapse Back frames"
  >
    <FrameIndent />
    <FrameLocation
      expanded={true}
      frame={
        Object {
          "displayName": "renderFoo",
          "id": 1,
          "library": "Back",
          "location": Object {
            "line": 55,
          },
          "source": Object {
            "url": "http://myfile.com/mahscripts.js",
          },
        }
      }
    />
    <span
      className="clipboard-only"
    >
       
    </span>
    <Badge>
      3
    </Badge>
  </div>
  <div
    className="frames-list"
  >
    <FrameIndent />
    <Frame
      copyStackTrace={[MockFunction]}
      disableContextMenu={false}
      displayFullUrl={false}
      frame={
        Object {
          "displayName": "renderFoo",
          "id": 1,
          "library": "Back",
          "location": Object {
            "line": 55,
          },
          "source": Object {
            "url": "http://myfile.com/mahscripts.js",
          },
        }
      }
      frameworkGroupingOn={true}
      getFrameTitle={[Function]}
      hideLocation={true}
      key="1"
      selectFrame={[MockFunction]}
      selectable={true}
      selectedFrame={Object {}}
      shouldMapDisplayName={false}
      toggleBlackBox={[MockFunction]}
      toggleFrameworkGrouping={[MockFunction]}
    />
    <FrameIndent />
    <Frame
      copyStackTrace={[MockFunction]}
      disableContextMenu={false}
      displayFullUrl={false}
      frame={
        Object {
          "displayName": "a",
          "id": 2,
          "library": "Back",
          "location": Object {
            "line": 55,
          },
          "source": Object {
            "url": "http://myfile.com/back.js",
          },
        }
      }
      frameworkGroupingOn={true}
      getFrameTitle={[Function]}
      hideLocation={true}
      key="2"
      selectFrame={[MockFunction]}
      selectable={true}
      selectedFrame={Object {}}
      shouldMapDisplayName={false}
      toggleBlackBox={[MockFunction]}
      toggleFrameworkGrouping={[MockFunction]}
    />
    <FrameIndent />
    <Frame
      copyStackTrace={[MockFunction]}
      disableContextMenu={false}
      displayFullUrl={false}
      frame={
        Object {
          "displayName": "b",
          "id": 3,
          "library": "Back",
          "location": Object {
            "line": 55,
          },
          "source": Object {
            "url": "http://myfile.com/back.js",
          },
        }
      }
      frameworkGroupingOn={true}
      getFrameTitle={[Function]}
      hideLocation={true}
      key="3"
      selectFrame={[MockFunction]}
      selectable={true}
      selectedFrame={Object {}}
      shouldMapDisplayName={false}
      toggleBlackBox={[MockFunction]}
      toggleFrameworkGrouping={[MockFunction]}
    />
  </div>
</div>
`;

exports[`Group renders group with anonymous functions 1`] = `
<div
  className="frames-group"
  onContextMenu={[Function]}
>
  <div
    className="group"
    key="1"
    onClick={[Function]}
    role="listitem"
    tabIndex={0}
    title="Show Back frames"
  >
    <FrameIndent />
    <FrameLocation
      expanded={false}
      frame={
        Object {
          "displayName": "",
          "id": 1,
          "library": "Back",
          "location": Object {
            "line": 55,
          },
          "source": Object {
            "url": "http://myfile.com/mahscripts.js",
          },
        }
      }
    />
    <span
      className="clipboard-only"
    >
       
    </span>
    <Badge>
      3
    </Badge>
  </div>
</div>
`;

exports[`Group renders group with anonymous functions 2`] = `
<div
  className="frames-group expanded"
  onContextMenu={[Function]}
>
  <div
    className="group"
    key="1"
    onClick={[Function]}
    role="listitem"
    tabIndex={0}
    title="Collapse Back frames"
  >
    <FrameIndent />
    <FrameLocation
      expanded={true}
      frame={
        Object {
          "displayName": "",
          "id": 1,
          "library": "Back",
          "location": Object {
            "line": 55,
          },
          "source": Object {
            "url": "http://myfile.com/mahscripts.js",
          },
        }
      }
    />
    <span
      className="clipboard-only"
    >
       
    </span>
    <Badge>
      3
    </Badge>
  </div>
  <div
    className="frames-list"
  >
    <FrameIndent />
    <Frame
      copyStackTrace={[MockFunction]}
      disableContextMenu={false}
      displayFullUrl={false}
      frame={
        Object {
          "displayName": "",
          "id": 1,
          "library": "Back",
          "location": Object {
            "line": 55,
          },
          "source": Object {
            "url": "http://myfile.com/mahscripts.js",
          },
        }
      }
      frameworkGroupingOn={true}
      hideLocation={true}
      key="1"
      selectFrame={[MockFunction]}
      selectable={true}
      selectedFrame={Object {}}
      shouldMapDisplayName={false}
      toggleBlackBox={[MockFunction]}
      toggleFrameworkGrouping={[MockFunction]}
    />
    <FrameIndent />
    <Frame
      copyStackTrace={[MockFunction]}
      disableContextMenu={false}
      displayFullUrl={false}
      frame={
        Object {
          "displayName": "",
          "id": 2,
          "library": "Back",
          "location": Object {
            "line": 55,
          },
          "source": Object {
            "url": "http://myfile.com/back.js",
          },
        }
      }
      frameworkGroupingOn={true}
      hideLocation={true}
      key="2"
      selectFrame={[MockFunction]}
      selectable={true}
      selectedFrame={Object {}}
      shouldMapDisplayName={false}
      toggleBlackBox={[MockFunction]}
      toggleFrameworkGrouping={[MockFunction]}
    />
    <FrameIndent />
    <Frame
      copyStackTrace={[MockFunction]}
      disableContextMenu={false}
      displayFullUrl={false}
      frame={
        Object {
          "displayName": "",
          "id": 3,
          "library": "Back",
          "location": Object {
            "line": 55,
          },
          "source": Object {
            "url": "http://myfile.com/back.js",
          },
        }
      }
      frameworkGroupingOn={true}
      hideLocation={true}
      key="3"
      selectFrame={[MockFunction]}
      selectable={true}
      selectedFrame={Object {}}
      shouldMapDisplayName={false}
      toggleBlackBox={[MockFunction]}
      toggleFrameworkGrouping={[MockFunction]}
    />
  </div>
</div>
`;
